--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "click>=8.1.8",
     "cryptography==43.0.1",
     "maskpass==0.3.7",
+    "toml>=0.10.2",
 ]
 
 [project.scripts]
